# autora-template-cookiecutter

./: .gitignore  README.md  cookiecutter.json  mkdocs.yml  requirements.txt
.github/workflows/: generate-full-template.yml  test-pytest.yml
autora-experiment-runner-experiment-runner-fdsa/: README.md  mkdocs.yml  pyproject.toml
autora-experiment-runner-experiment-runner-fdsa/docs/: additional-example.ipynb  basic-usage.ipynb  index.md  quickstart.md
autora-experiment-runner-experiment-runner-fdsa/tests/: test_fdsa.py
docs/: index.md
generate_full/: generate.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{ cookiecutter.__project_slug }}/: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.__project_slug }}/.github/workflows/: python-publish.yml
{{ cookiecutter.__project_slug }}/docs/: additional-example.ipynb  basic-usage.ipynb  index.md  quickstart.md
{{ cookiecutter.__project_slug }}/src/autora/experiment_runner/experimentation_manager/{{ cookiecutter.__python_name }}/: __init__.py
{{ cookiecutter.__project_slug }}/src/autora/experiment_runner/recruitment_manager/{{ cookiecutter.__python_name }}/: __init__.py
{{ cookiecutter.__project_slug }}/src/autora/experiment_runner/{{ cookiecutter.__python_name }}/: __init__.py
{{ cookiecutter.__project_slug }}/src/autora/experimentalist/pooler/{{ cookiecutter.__python_name }}/: __init__.py
{{ cookiecutter.__project_slug }}/src/autora/experimentalist/sampler/{{ cookiecutter.__python_name }}/: __init__.py
{{ cookiecutter.__project_slug }}/src/autora/theorist/{{ cookiecutter.__python_name }}/: __init__.py
{{ cookiecutter.__project_slug }}/src/autora/{{ cookiecutter.__autora_contribution_type }}/{{ cookiecutter.__contribution_subtype }}/{{ cookiecutter.__python_name }}/: __init__.py
{{ cookiecutter.__project_slug }}/src/autora/{{ cookiecutter.__contrib_type_modulename }}/{{ cookiecutter.__contrib_subtype_modulename }}/{{ cookiecutter.__contrib_name_modulename }}/: __init__.py
{{ cookiecutter.__project_slug }}/src/autora/{{ cookiecutter.__contribution_type_modulename }}/{{ cookiecutter.__contribution_subtype_modulename }}/{{ cookiecutter.__python_name }}/: __init__.py
{{ cookiecutter.__project_slug }}/tests/: test_experimentalist_pooler_example.py  test_experimentalist_sampler_example.py  test_theorist_example.py  test_{{ cookiecutter.__contrib_name_modulename }}.py  test_{{ cookiecutter.__contribution_name_modulename }}.py  test_{{ cookiecutter.__python_name }}.py
{{ cookiecutter.project_slug }}/docs/: additional-example.ipynb  basic-usage.ipynb  quick-start.md
{{ cookiecutter.project_slug }}/src/autora/experimentalist/pooler/example_pooler/: __init__.py
{{ cookiecutter.project_slug }}/src/autora/experimentalist/sampler/example_sampler/: __init__.py
{{ cookiecutter.project_slug }}/src/autora/experimentalist/sampler/{{ cookiecutter.__python_name }}/: __init__.py
{{ cookiecutter.project_slug }}/src/autora/experimentalist/sampler/{{ cookiecutter.contribution_name }}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_experimentalist_sampler_example.py
