[project]
# UPDATE THIS BEFORE PUBLISHING
name = "fdsa"
description = "Describe your contriution"
authors = [{ name = "fds", email = "dfsafds" }]
version = "0.1.0"

readme = "README.md"
license = { text = "MIT license" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = ""
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

