[project]
# UPDATE THIS BEFORE PUBLISHING
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [{ name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }]
version = "{{ cookiecutter.version }}"

readme = "README.md"
license = { text = "cookiecutter.open_source_license" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "{{ cookiecutter.repository }}"
documentation = "https://autoresearch.github.io/autora/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
