[project]
# UPDATE THIS BEFORE PUBLISHING
name = "{{ cookiecutter.contribution_name }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [{ name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }]
{% if cookiecutter.use_dynamic_versioning == "yes" %}dynamic = ["version"]{% else %}version = "0.1.0"{% endif %}

readme = "README.md"
license = { text = "{{ cookiecutter.license }}" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "{{ cookiecutter.repository }}"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
{% if cookiecutter.use_dynamic_versioning == "yes" %}requires = ["setuptools", "setuptools_scm"]{% else %}requires = ["setuptools"]{% endif %}
build-backend = "setuptools.build_meta"

{% if cookiecutter.use_dynamic_versioning == "yes" %}[tool.setuptools_scm]
{% endif %}