[project]
# UPDATE THIS BEFORE PUBLISHING
name = "{{ cookiecutter.__contrib_name_modulename }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [{ name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }]
{% if cookiecutter.__contrib_utilities == "advanced" %}dynamic = ["version"]{% else %}version = "0.1.0"{% endif %}

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "{{ cookiecutter.__repository }}"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
{% if cookiecutter.__contrib_utilities == "advanced" %}requires = ["setuptools", "setuptools_scm"]{% else %}requires = ["setuptools"]{% endif %}
build-backend = "setuptools.build_meta"

{% if cookiecutter.__contrib_utilities == "advanced" %}[tool.setuptools_scm]
{% endif %}